# sonar-vision

./: .gcconfig  AGENT.md  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EDUCATIONAL_NOTES.md  GETTING_STARTED.md  LICENSE  LOW_LEVEL.md  PLUG_AND_PLAY.md  README.md  SIMULATION_TEST_REPORT.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: README.md  agent-workflow.yml  ci.yml  pipeline-ci.yml
docs/: AGENT_INTERFACE.md
memory/: JOURNAL.md
sonar_vision/: __init__.py  display.py  map.py  signal.py  sonar.py  tracker.py
tests/: test_all.py  test_simulation_scenarios.py
