[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-vision"
version = "0.1.0"
description = "Sonar vision — signal processing and spatial awareness for agents"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["sonar_vision*"]
