[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-vision"
version = "0.1.0"
description = "Pure-Python sonar ping/echo simulation, signal processing, multi-object tracking, and spatial mapping toolkit"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["sonar_vision*"]
